--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 
 <HTML>
 <HEAD>
-<TITLE>ADV-IT</TITLE>
+<TITLE>VOVA</TITLE>
 <SCRIPT LANGUAGE="JavaScript">
       var sizes = new Array(0,1,2,4,8,10,12);
       sizes.pos = 0;
@@ -19,7 +19,7 @@ setTimeout('Elastic()',100)
 </SCRIPT>
 <BODY  bgcolor=black  onLoad=Elastic()>
 <CENTER>
-<font color="white"><h2>Hello from <font color="yellow">Denis Astahov!</font><br>
+<font color="white"><h2>Hello from <font color="yellow">Ligum Vladimir!</font><br>
 Welcome to Python Flask Web Page!
 <font color="gold"><H1 ID="elastic" ALIGN="Center">GitHub Actions RULEZZzz!</H1>
 <br>
